# eval_tools

./: .gitignore  Claude.md  LLM 评测工具需求与实施文档.md  PORTS.config  README.md  tasks.md
backend/: add_columns_migration.py  add_concurrency_column.py  add_evaluator_tables.py  add_execution_error_column.py  add_run_stats_migration.py  add_task_name_column.py  debug_logging.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: __init__.py  cases.py  dependencies.py  eval.py  evaluators.py  models.py  websocket.py
backend/app/evaluators/: __init__.py  base.py  code_executor.py  exact_match.py  json_compare.py  llm_judge.py
backend/app/models/: __init__.py  case_set.py  eval_result.py  eval_run.py  eval_task.py  evaluator.py  model.py  model_provider.py  task_evaluator.py  test_case.py
backend/app/schemas/: __init__.py  cases.py  eval.py  evaluator.py  models.py
backend/app/services/: __init__.py  case_service.py  eval_service.py  evaluator_service.py  excel_service.py  model_service.py
backend/app/utils/: __init__.py  json_repair.py  llm_client.py  templater.py
backend/tests/: conftest.py  test_code_executor.py  test_concurrent_eval.py  test_evaluator_service.py  test_evaluators.py  test_excel_parser.py  test_json_repair.py  test_llm_judge.py  test_templater.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: cases.ts  eval.ts  evaluators.ts  index.ts  models.ts
frontend/src/components/: DiffViewer.vue
(+17 files in other folders)
