[project]
name = "llm-eval-studio"
version = "0.1.0"
description = "LLM Automated Evaluation Tool"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "pydantic>=2.5.0",
    "pandas>=2.1.0",
    "openpyxl>=3.1.2",
    "jinja2>=3.1.3",
    "httpx>=0.26.0",
    "python-multipart>=0.0.6",
    "aiosqlite>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "respx>=0.21.0",
    "httpx>=0.26.0",
]

[build-system]
requires = ["setuptools>=69.0.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
